--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
 		"@reduxjs/toolkit": "^1.8.6",
 		"axios": "^1.1.3",
 		"classnames": "^2.3.2",
+		"framer-motion": "^7.5.3",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
 		"react-redux": "^8.0.4",
