--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
 		"preview": "vite preview",
 		"format": "prettier --write .",
 		"lint": "eslint . --ext .ts,.tsx,.js,.jsx",
-		"lint:fix": "eslint --fix . --ext .ts,.tsx,.js,.jsx"
+		"lint:fix": "eslint --fix . --ext .ts,.tsx,.js,.jsx",
+		"test": "vitest"
 	},
 	"dependencies": {
 		"@reduxjs/toolkit": "^1.8.6",
@@ -31,15 +32,19 @@
 		"@typescript-eslint/eslint-plugin": "^5.40.0",
 		"@typescript-eslint/parser": "^5.40.0",
 		"@vitejs/plugin-react": "^2.1.0",
+		"@vitest/ui": "^0.25.3",
 		"autoprefixer": "^10.4.12",
 		"eslint-config-prettier": "^8.5.0",
 		"eslint-config-standard": "^17.0.0",
 		"eslint-plugin-import": "^2.26.0",
 		"eslint-plugin-react": "^7.31.10",
+		"eslint-plugin-vitest-globals": "^1.2.0",
+		"jsdom": "^20.0.3",
 		"postcss": "^8.4.18",
 		"prettier": "2.7.1",
 		"tailwindcss": "^3.1.8",
 		"typescript": "^4.6.4",
-		"vite": "^3.1.0"
+		"vite": "^3.1.0",
+		"vitest": "^0.25.3"
 	}
 }
