--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,7 +16,8 @@
 		"isolatedModules": true,
 		"noEmit": true,
 		"jsx": "react-jsx",
-		"paths": { "@/*": ["./src/*"] }
+		"paths": { "@/*": ["./src/*"] },
+		"types": [ "vitest/globals" ],
 	},
 	"include": ["src"],
 	"references": [{ "path": "./tsconfig.node.json" }]
