--- a/package.json
+++ b/package.json
@@ -14,37 +14,37 @@
 		"test": "vitest"
 	},
 	"dependencies": {
-		"@reduxjs/toolkit": "^1.8.6",
-		"classnames": "^2.3.2",
-		"framer-motion": "^7.5.3",
-		"react": "^18.2.0",
-		"react-dom": "^18.2.0",
-		"react-redux": "^8.0.4",
-		"react-router-dom": "^6.4.2",
-		"redux-persist": "^6.0.0"
+		"@reduxjs/toolkit": "2.2.5",
+		"classnames": "2.3.2",
+		"framer-motion": "11.2.11",
+		"react": "18.2.0",
+		"react-dom": "18.2.0",
+		"react-redux": "9.1.2",
+		"react-router-dom": "6.4.2",
+		"redux-persist": "6.0.0"
 	},
 	"devDependencies": {
-		"@types/node": "^18.8.5",
-		"@types/react": "^18.0.17",
-		"@types/react-dom": "^18.0.6",
-		"@types/react-redux": "^7.1.24",
-		"@types/react-router-dom": "^5.3.3",
-		"@typescript-eslint/eslint-plugin": "^5.40.0",
-		"@typescript-eslint/parser": "^5.40.0",
-		"@vitejs/plugin-react": "^2.1.0",
-		"@vitest/ui": "^0.25.3",
-		"autoprefixer": "^10.4.12",
-		"eslint-config-prettier": "^8.5.0",
-		"eslint-config-standard": "^17.0.0",
-		"eslint-plugin-import": "^2.26.0",
-		"eslint-plugin-react": "^7.31.10",
-		"eslint-plugin-vitest-globals": "^1.2.0",
-		"jsdom": "^20.0.3",
-		"postcss": "^8.4.18",
-		"prettier": "2.7.1",
-		"tailwindcss": "^3.1.8",
-		"typescript": "^4.6.4",
-		"vite": "^3.1.0",
-		"vitest": "^0.25.3"
+		"@testing-library/react": "16.0.0",
+		"@types/node": "20.14.7",
+		"@types/react": "18.0.17",
+		"@types/react-dom": "18.0.6",
+		"@types/react-redux": "7.1.24",
+		"@types/react-router-dom": "5.3.3",
+		"@typescript-eslint/eslint-plugin": "7.13.1",
+		"@typescript-eslint/parser": "7.13.1",
+		"@vitejs/plugin-react": "4.3.1",
+		"@vitest/ui": "1.6.0",
+		"autoprefixer": "10.4.12",
+		"eslint-config-prettier": "9.1.0",
+		"eslint-config-standard": "17.0.0",
+		"eslint-plugin-import": "2.26.0",
+		"eslint-plugin-react": "7.31.10",
+		"jsdom": "24.1.0",
+		"postcss": "8.4.18",
+		"prettier": "3.3.2",
+		"tailwindcss": "3.1.8",
+		"typescript": "5.5.2",
+		"vite": "5.3.1",
+		"vitest": "1.6.0"
 	}
 }
